--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,15 @@
     <string name="action_settings">Settings</string>
     
     <string name="input_phone_num"><font size="14">请输入手机号(数字)</font></string>
+    <string name="input_phone_num2"><font size="14">请输入11位手机号</font></string>
+    <string name="input_phone_num3"><font size="14">请输入原11位手机号</font></string>
+    
+    <string name="forget_pwd_textview"><u>忘记密码？</u></string>
+    <string name="input_pwd"><font size="14">请输入密码(数字或字母)</font></string>
+    <string name="input_pwd2"><font size="14">请输入6-16位密码</font></string>
+    <string name="input_pwd3"><font size="14">请输入新密码</font></string>
+    
+    <string name="input_v_code"><font size="14">请输入验证码</font></string>
+    
 
 </resources>
